@@ -131,10 +131,6 @@ noise_level 32
 # Automatically tune the noise threshold (default: on)
 noise_tune on
 
-# Enables motion to adjust its detection/noise level for very dark frames
-# Don't use this with noise_tune on. (default: off)
-night_compensate off
-
 # Despeckle motion image using (e)rode or (d)ilate or (l)abel (Default: not defined)
 # Recommended value is EedDl. Any combination (and number of) of E, e, d, and D is valid.
 # (l)abeling must only be used once and the 'l' must be the last letter.
